# JobInformationAggregation

./: .gitignore  JIA.xmind  README.md  func.py  main.py  mobile_func.py  requirements.txt  server.py  test.py
backend/: .funignore  .gitignore  Funfile  bootstrap  clazz.py  func.py  main.py  pyproject.toml  template.yml  test.py
backend/data/: .gitignore
frontend/: package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
html/: index.html  login.html  test.html  user.html
template/: nowork_template.html  work_template.html
tmp/: li.html  render_template.html  structure_parse.html  test.py
