[tool.poetry]
name = "JIA"
version = "0.1.0"
description = ""
authors = ["Zxilly <zhouxinyu1001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.61.1"}
beautifulsoup4 = "^4.9.1"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
